--- a/src/c/dicas/sockets/v2-ipv6/Makefile
+++ b/src/c/dicas/sockets/v2-ipv6/Makefile
@@ -1,6 +1,6 @@
 all:
-	gcc -Wall -c common.c
-	gcc -Wall -Wextra client.c common.o -o client
-	gcc -Wall -Wextra server.c common.o -o server
-	gcc -Wall -lpthread server-multi-thread.c common.o -o server-mt
+	tcc -Wall -c common.c
+	tcc -Wall -Wextra client.c common.o -o client
+	tcc -Wall -Wextra server.c common.o -o server
+	tcc -Wall -lpthread server-multi-thread.c common.o -o server-mt
 
